fix: Fix issue where center-aligned images weren't center-aligned in editor

--- a/style.css
+++ b/style.css
@@ -88,7 +88,6 @@ cite {
 .aligncenter {
   margin-right: auto;
   margin-left: auto;
-  display: block;
 }
 
 .wp-block-embed iframe {
