--- a/stylesheets/css/style-editor.css
+++ b/stylesheets/css/style-editor.css
@@ -70,7 +70,6 @@ cite {
 .aligncenter {
   margin-right: auto;
   margin-left: auto;
-  display: block;
 }
 
 .wp-block-embed iframe {
