--- a/stylesheets/scss/_wordpress.scss
+++ b/stylesheets/scss/_wordpress.scss
@@ -9,7 +9,6 @@
 .aligncenter {
   margin-right: auto;
   margin-left: auto;
-  display: block;
 }
 
 .wp-block-embed {
